--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Demo autoComplete</title>
+	<title>Jquery</title>
 	<link rel="stylesheet" type="text/css" href="autoComplete.css">
 	<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="autoComplete.js"></script>
